@@ -88,6 +88,7 @@ java -jar compiler.jar --compilation_level SIMPLE_OPTIMIZATIONS --js \
 	js/loc/desert.js \
 	js/loc/farm.js \
 	js/loc/lake.js \
+	js/loc/kingsroad.js \
 	js/loc/oasis.js \
 	js/loc/glade.js \
 	js/loc/burrows.js \
