@@ -149,6 +149,7 @@
 		<script type="text/javascript" src="js/loc/desert.js"></script>
 		<script type="text/javascript" src="js/loc/farm.js"></script>
 		<script type="text/javascript" src="js/loc/lake.js"></script>
+		<script type="text/javascript" src="js/loc/kingsroad.js"></script>
 		
 		<script type="text/javascript" src="js/loc/oasis.js"></script>
 		
