@@ -11,6 +11,7 @@ Version 0.3s
 * You can no longer get into Rigard by mistake (before you have a pass) through the brothel announcer event.
 * New patreon sponsored content by Ben - Gay sex with Estevan (atm you need to be a guy to get this). Final scene:
  - Fuck him.
+* Added a new area, the King's road, reachable from the main gates of Rigard. Not much here yet.
 
 --------------------------------------------
              PREVIOUS VERSIONS
